# wagtail-contact-form

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tests.py  views.py
.github /workflows/: run-tests.yml
.github/workflows/: run-tests.yml
README/: Common Issues.md  Configuration.md  Form Fields Configuration.md  Installation.md  Testing.md
contact_form/: __init__.py  apps.py  compat.py  forms.py  forms_admin_urls.py  models.py  notifications.py  requirements-dev.txt  requirements.txt  settings.py  tests.py  turnstile.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
contact_form/migrations/: 0001_initial.py  0002_alter_contactpage_from_address_and_more.py  0003_contactpage_captcha_provider.py  0004_captchasettings.py  0005_alter_captchasettings_recaptcha_domain_and_more.py  0006_alter_captchasettings_turnstile_secret_key_and_more.py  0007_alter_captchasettings_turnstile_secret_key_and_more.py  0008_captchasettings_turnstile_size_and_more.py  0009_update_field_labels.py
contact_form/static/contact_form/js/: sensitive_field.js
contact_form/templates/contact_form/: contact_page.html  contact_page_landing.html
contact_form/templates/wagtailadmin/tables/: custom_date_cell.html
contact_form/tests/unit/: test_captcha_settings.py  test_contact_page.py  test_localhost.py  test_notifications.py  test_permissions.py  test_submissions.py  test_turnstile.py
migrations/: 0001_initial.py  0002_alter_contactpage_from_address_and_more.py
templates/: contact_page_landing.html
templates/contact/: contact_page.html  contact_page_landing.html
testproject/: requirements.txt
testproject/home/: models.py
testproject/search/: views.py
testproject/static/: staticfiles.json
testproject/testproject/: urls.py  wsgi.py
testproject/testproject/settings/: base.py  dev.py
testproject/testproject/templates/: base.html
wagtail_contact_form.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
