[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "contact_form"
version = "0.0.7"
authors = [
    {name = "Filip Woźniak", email = "wozniak.contact@gmail.com"},
]

requires-python = ">=3.10"
keywords = ["wagtail", "django"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Django",
]

[build-system.requires]
python = ">=3.10"