[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "contact_form"
version = "0.0.9"
authors = [
    {name = "Filip Woźniak", email = "wozniak.contact@gmail.com"},
]

description = "A very basic contact form with CAPTCHA module based on two articles from LearnWagtail website (Contact Forms and Adding Recaptcha to Your Contact Forms)."
requires-python = ">=3.9"
keywords = ["wagtail", "django"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Framework :: Django",
]