[metadata]
name = wagtail-contact_form
version = 1.0.0
description = A very basic contact form with CAPTCHA module based on two articles from LearnWagtail website ("Contact Forms" and "Adding Recaptcha to Your Contact Forms").
url = https://github.com/FilipWozniak/dj-apps-contact_form
license = MIT

[options]
include_package_data = true
python_requires = >=3.11.3
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=4.1